--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "consolidate": "^0.15.1",
+    "cookie-parser": "^1.4.4",
+    "cookie-session": "^1.3.3",
     "ejs": "^2.6.1",
     "expose-loader": "^0.7.5",
     "express": "^4.16.4",
