--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ejs": "^2.6.1",
     "expose-loader": "^0.7.5",
     "express": "^4.16.4",
+    "file-loader": "^3.0.1",
     "jquery": "^3.3.1",
     "mysql": "^2.16.0",
     "npm": "^6.5.0",
@@ -48,6 +49,7 @@
     "vue": "^2.5.17",
     "vue-loader": "^15.4.2",
     "vue-router": "^3.0.1",
-    "vue-template-compiler": "^2.5.17"
+    "vue-template-compiler": "^2.5.17",
+    "vuex": "^3.1.1"
   }
 }
